--- a/ufb.web/src/main/webapp/static/family/css/style.css
+++ b/ufb.web/src/main/webapp/static/family/css/style.css
@@ -3698,7 +3698,6 @@ grades-item{
 .grades-item-title .reduce{
     width:14px;
     height:14px;
-//    background:url(../images/12.png) no-repeat;
     top:50%;
     margin:-20px 20px 0 0;
     cursor:pointer;
@@ -3830,10 +3829,7 @@ grades-item{
 }
 
 
-//***********************************09-08 by Tracy***end***********************//
-
-
-
+/***********************************09-08 by Tracy***end***********************/
 
 
 
